src/tui/snapshots/atelier__tui__tests__actions_menu.snap
---
source: src/tui/mod.rs
expression: "render(&model, 100, 30)"
---
"╭[1] Workspaces │ Repos─────────╮╭ Main ───────────────────────────────────────────────────────────╮"
"│default (here) 1 open          ││Repo       api                                                   │"
"│side                           ││Branch     ABC-1-login                                           │"
"│             ╭ Actions ─────────────────────────────────────────────────────────────╮             │"
"│             │Space  open tab · check out review · start issue · switch workspace   │             │"
"╰─────────────│Enter  fold group · focus the main view                               │             │"
"╭[2] Work · de│-      collapse all groups                                            │             │"
"│▾ ABC-1 2 · 1│=      expand all groups                                              │             │"
"│  ● api:ABC-1│n      new worktree or carnet · new workspace                         │             │"
"│  ○ web:ABC-1│e      edit group · edit repo alias                                   │             │"
"│○ api:main ↓3│m      move to workspace · set repo workspace                         │             │"
"│             │d      remove                                                         │             │"
"│             │x      close tab                                                      │             │"
"│             │c      close or reopen carnet                                         │             │"
"│             │g      open tool                                                      │             │"
"│             │p      pull (git pull --ff-only --prune)                              │             │"
"╰─────────────│f      finish merged work: remove worktrees, close carnet, pull main  │             │"
"╭[3] To review│o      browse (open in the browser)                                   │             │"
"│  api#2 Chang│y      copy path, branch or URL                                       │             │"
"│  org/other#1│C-o    copy path                                                      │             │"
"│             │/      filter                                                         │─────────────╯"
"│             │R      refresh                                                        │─────────────╮"
"╰─────────────│+      next screen mode                                               │             │"
"╭[4] To do │ I│_      previous screen mode                                           │             │"
"│no [tracker] │@      toggle the command log                                         │             │"
"│             │E      export the command log to a file                               │             │"
"│             │q      quit                                                           │             │"
"│             ╰ Enter run · Esc close ───────────────────────────────────────────────╯             │"
"╰───────────────────────────────╯╰─────────────────────────────────────────────────────────────────╯"
"Space open · n new · e edit · m move · d remove · x close tab · g open · p pull · f finish · ? actio"
