src/tui/snapshots/atelier__tui__tests__actions_menu_scrolled_to_its_legend.snap
---
source: src/tui/mod.rs
expression: "render_with(&model, 100, 30, Icons::Nerd)"
---
"╭[1] Workspaces │ Repos─────────╮╭ Main ───────────────────────────────────────────────────────────╮"
"│ default (he╭ Actions ─────────────────────────────────────────────────────────────╮             │"
"│ side       │✘      status: merge conflicts                                        │             │"
"│             │↻      status: rebase, merge or other git operation in progress       │             │"
"│             │⊟      status: prunable, its directory or .git gone                   │             │"
"╰─────────────│⊞      status: locked worktree                                        │             │"
"╭[2] Work · de│⊘      status: detached HEAD                                          │             │"
"│ ABC-1 2 · 1│⚐      status: branch in several worktrees, or not its path           │             │"
"│    api:ABC│/      status: branch without a worktree                              │             │"
"│    web:ABC│^      status: the main worktree                                      │             │"
"│  api:main │∅      status: no common ancestor with the default branch             │             │"
"│             │_      status: same commit as the default branch, clean               │             │"
"│             │–      status: same commit as the default branch, dirty               │             │"
"│             │⊂      status: integrated into the default branch                     │             │"
"│             │✗      status: merging into the default branch would conflict         │             │"
"│             │↕      status: ahead of and behind the default branch                 │             │"
"╰─────────────│↑      status: ahead of the default branch                            │             │"
"╭[3] To review│↓      status: behind the default branch                              │             │"
"│   api#2 Cha│|      status: in sync with the remote                                │             │"
"│   org/other│⇡      status: ahead of the remote                                    │             │"
"│             │⇣      status: behind the remote                                      │─────────────╯"
"│             │⇅      status: diverged from the remote                               │─────────────╮"
"╰─────────────│↓N     behind its upstream by N commits                               │             │"
"╭[4] To do │ I│      finished, the row dimmed: integrated into the default branch   │             │"
"│no [tracker] │      finished, the row dimmed: its upstream branch is gone          │             │"
"│             │✓      command log: the command succeeded                             │             │"
"│             │✗      command log: the command failed                                │             │"
"│             │⟳      hint bar: loading                                              │             │"
"╰─────────────╰ Enter run · Esc close ───────────────────────────────────────────────╯─────────────╯"
"Space open · n new · e edit · m move · d remove · x close tab · g open · p pull · f finish · ? actio"
