src/tui/snapshots/atelier__tui__tests__carnet_shows_its_rendered_readme.snap
---
source: src/tui/mod.rs
expression: "render(&model, 120, 30)"
---
"╭[1] Workspaces │ Repos────────────────╮╭ Main ────────────────────────────────────────────────────────────────────────╮"
"│default (here) 1 open                 ││Carnet     2026-10-02-ideas                                                   │"
"│side                                  ││Path       /data/2026-10-02-ideas                                             │"
"│                                      ││Workspace  default                                                            │"
"│                                      ││Tickets    none                                                               │"
"╰──────────────────────────────────────╯│Summary    none                                                               │"
"╭[2] Work │ Carnets · default──────────╮│Tab        ○ closed                                                           │"
"│▾ ABC-1 3 · 1 open                    ││                                                                              │"
"│  ● api:ABC-1-login !                 ││README                                                                        │"
"│  ○ web:ABC-1-form                    ││# 2026-10-02-ideas                                                            │"
"│  ○ 2026-10-01-ABC-1-logs             ││                                                                              │"
"│○ api:main ↓3                         ││What I found so far.                                                          │"
"│▾ Carnets 2 · 0 open                  ││                                                                              │"
"│  ○ 2026-10-02-ideas                  ││                                                                              │"
"│  ○ 2026-09-20-old                    ││                                                                              │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯│                                                                              │"
"╭[3] To review │ Mine──────────────────╮│                                                                              │"
"│  api#2 Change 2 @alice               ││                                                                              │"
"│  org/other#1 Change 1 @alice         ││                                                                              │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Command log ─────────────────────────────────────────────────────────────────╮"
"╰──────────────────────────────────────╯│✓ git -C /src/api pull --ff-only                                              │"
"╭[4] To do │ In progress │ Done────────╮│                                                                              │"
"│no [tracker] configured               ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────╯"
"Space open · n new · e edit · m move · d remove · x close tab · c close · p pull · f finish · ? actions · q quit        "
