src/tui/snapshots/atelier__tui__tests__carnets_sub_tab.snap
---
source: src/tui/mod.rs
expression: "render(&model, 120, 30)"
---
"╭[1] Workspaces │ Repos────────────────╮╭ Main ────────────────────────────────────────────────────────────────────────╮"
"│default (here) 2 open                 ││Summary     Login fails after the token refresh                               │"
"│side                                  ││Path        /data/2026-10-01-ABC-1-logs                                       │"
"│                                      ││Carnet      ✎ open                                                            │"
"│                                      ││Workspace   default                                                           │"
"╰──────────────────────────────────────╯│Group       ABC-1                                                             │"
"╭[2] Work │ Carnets────────────────────╮│Issue keys  ABC-1, api#4                                                      │"
"│◉ ✎ 2026-10-01 Login fails after the t││Tab         ◉ open                                                            │"
"│○ ✎ 2026-08-01 side · done            ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯│                                                                              │"
"╭[3] To review │ Mine──────────────────╮│                                                                              │"
"│  api#2 Change 2 @alice               ││                                                                              │"
"│  org/other#1 Change 1 @alice         ││                                                                              │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Command log ─────────────────────────────────────────────────────────────────╮"
"╰──────────────────────────────────────╯│✓ git -C /src/api pull --ff-only                                              │"
"╭[4] To do │ In progress │ Done────────╮│                                                                              │"
"│no [tracker] configured               ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────╯"
"Space open · e edit · m move · x close tab · c close · g open · s search · ? actions · q quit                           "
