src/tui/snapshots/atelier__tui__tests__ci_marks_rows_and_carries_its_colour_to_the_detail.snap
---
source: src/tui/mod.rs
expression: terminal.backend().to_string()
---
"╭[1] Workspaces │ Repos────────────────╮╭ Main ────────────────────────────────────────────────────────────────────────╮"
"│default (here) 1 open                 ││Repo       api                                                                │"
"│side                                  ││Branch     ABC-1-login                                                        │"
"│                                      ││Path       /src/api.ABC-1-login                                               │"
"│                                      ││Workspace  default                                                            │"
"╰──────────────────────────────────────╯│Group      ABC-1                                                              │"
"╭[2] Work · default────────────────────╮│Tab        ● open                                                             │"
"│▾ ABC-1 2 · 1 open                    ││Status     ! dirty +0 -0                                                      │"
"│  ● api:ABC-1-login ◆ !               ││Upstream   none                                                               │"
"│  ○ web:ABC-1-form                    ││Commit     abc1234 Commit ()                                                  │"
"│○ api:main ◆ ↓3                       ││CI         ◆ failed · stale                                                   │"
"│                                      ││PR         #27 changes requested                                              │"
"│                                      ││                                                                              │"
"│                                      ││Recent commits                                                                │"
"│                                      ││abc1234 Add login (2 hours ago, R)                                            │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯│                                                                              │"
"╭[3] To review │ Mine──────────────────╮│                                                                              │"
"│  api#2 Change 2 @alice               ││                                                                              │"
"│  org/other#1 Change 1 @alice         ││                                                                              │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Command log ─────────────────────────────────────────────────────────────────╮"
"╰──────────────────────────────────────╯│✓ git -C /src/api pull --ff-only                                              │"
"╭[4] To do │ In progress │ Done────────╮│                                                                              │"
"│no [tracker] configured               ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────╯"
"Space open · n new · e edit · m move · d remove · x close tab · p pull · f finish · ? actions · q quit                  "
