src/tui/snapshots/atelier__tui__tests__finish_plan.snap
---
source: src/tui/mod.rs
expression: "render(&model, 120, 30)"
---
"╭[1] Workspaces │ Repos────────────────╮╭ Main ────────────────────────────────────────────────────────────────────────╮"
"│default (here) 1 open                 ││Repo       api                                                                │"
"│side                                  ││Branch     ABC-1-login                                                        │"
"│                                      ││Path       /src/api.ABC-1-login                                               │"
"│                                      ││Workspace  default                                                            │"
"╰──────────────────────────────────────╯│Group      ABC-1                                                              │"
"╭[2] Work │ Carnets · default──────────╮│Tab        open                                                               │"
"│▾ ABC-1 3 · 1 open                    ││Status     clean                                                              │"
"│  ● api:ABC-1-login ⊂                 ││Upstream   none                                                               │"
"│  ○ web:ABC-1-form ⊘                  ││Commit     abc1234 Commit ()                                                  │"
"│  ○ 2026-10-01-ABC-1-logs             ││Finished   integrated (f to finish)                                           │"
"│○ api:main ↓╭ Finish ABC-1 ──────────────────────────────────────────────────────────────────────────────╮            │"
"│▸ Carnets 2 │! fetch failed in web: showing last known state                                             │            │"
"│            │[x] remove api:ABC-1-login              ⊂ integrated · tab open                             │            │"
"│            │[x] remove web:ABC-1-form               ⊘ upstream gone · branch kept: 2 commits not in main│            │"
"│            │    web:ABC-1-wip                         not integrated, upstream present                  │            │"
"╰────────────│[ ] close carnet 2026-10-01-ABC-1-logs    work still in flight                              │            │"
"╭[3] To revie│[x] pull api:main                         ↓3                                                │            │"
"│  api#2 Chan│    pull web:main                         no upstream                                       │            │"
"│  org/other#╰ Space toggle · Enter run 3 · Esc cancel ───────────────────────────────────────────────────╯            │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Command log ─────────────────────────────────────────────────────────────────╮"
"╰──────────────────────────────────────╯│✓ git -C /src/api pull --ff-only                                              │"
"╭[4] To do │ In progress │ Done────────╮│                                                                              │"
"│no [tracker] configured               ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────╯"
"Space open · n new · e edit · m move · d remove · x close · c close · p pull · f finish · ? actions · q quit            "
