src/tui/snapshots/atelier__tui__tests__finished_rows_are_dimmed_and_marked.snap
---
source: src/tui/mod.rs
expression: "render(&finished(120, 30), 120, 30)"
---
"╭[1] Workspaces │ Repos────────────────╮╭ Main ────────────────────────────────────────────────────────────────────────╮"
"│default (here) 1 open                 ││Repo        api                                                               │"
"│side                                  ││Branch      ABC-1-login                                                       │"
"│                                      ││Path        /src/api.ABC-1-login                                              │"
"│                                      ││Workspace   default                                                           │"
"╰──────────────────────────────────────╯│Group       ABC-1                                                             │"
"╭[2] Work │ Carnets · default──────────╮│Issue keys  ABC-1                                                             │"
"│▾ ABC-1 3 · 1 open                    ││Tab         ◉ open                                                            │"
"│  ◉ api:ABC-1-login                   ││Changes     clean                                                             │"
"│  ○ web:ABC-1-form                    ││Remote      no upstream                                                       │"
"│  ○ ✎ 2026-10-01 ABC-1-logs ABC-1     ││Commit      abc1234 Commit ()                                                 │"
"│○ api:main                            ││Checks      none                                                              │"
"│○ ✎ 2026-10-02 ideas                  ││Finished    ⊂ merged into the default branch (f to finish)                    │"
"│○ ✎ 2026-09-20 old                    ││                                                                              │"
"│                                      ││Recent commits                                                                │"
"│                                      ││abc1234 Add login (2 hours ago, R)                                            │"
"╰──────────────────────────────────────╯│                                                                              │"
"╭[3] To review │ Mine──────────────────╮│                                                                              │"
"│  api#2 Change 2 @alice               ││                                                                              │"
"│  org/other#1 Change 1 @alice         ││                                                                              │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Command log ─────────────────────────────────────────────────────────────────╮"
"╰──────────────────────────────────────╯│✓ git -C /src/api pull --ff-only                                              │"
"╭[4] To do │ In progress │ Done────────╮│                                                                              │"
"│no [tracker] configured               ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────╯"
"Space open · n new · e edit · m move · d remove · x close tab · c close · g open · p pull · f finish · ? actions · q qui"
