src/tui/snapshots/atelier__tui__tests__group_prompt_lists_its_completions.snap
---
source: src/tui/mod.rs
expression: "render(&model, 100, 30)"
---
"╭[1] Workspaces │ Repos─────────╮╭ Main ───────────────────────────────────────────────────────────╮"
"│default (here) 1 open          ││Repo        api                                                  │"
"│side                           ││Branch      main                                                 │"
"│                               ││Path        /src/api                                             │"
"│                               ││Workspace   default                                              │"
"╰───────────────────────────────╯│Group       none                                                 │"
"╭[2] Work · default─────────────╮│Issue keys  none                                                 │"
"│▾ ABC-1 2 · 1 open             ││Tab         ○ closed                                             │"
"│  ◉ api:ABC-1-login            ││Changes     clean                                                │"
"│  ○ web:ABC-1-form             ││Remote      ⇣ behind: 3 commits to pull                          │"
"│○ api:main                     ││Commit      abc1234 Commit ()                                    │"
"│                               ││Checks      none                                                 │"
"│                               ││                                                                 │"
"│             ╭ Group of api:main ───────────────────────────────────────────────────╮             │"
"│             │ABC-1                                                                 │             │"
"│             │Tab ABC-1 · SLOW PAGES                                                │             │"
"╰─────────────╰ Enter submit · Esc cancel ───────────────────────────────────────────╯             │"
"╭[3] To review │ Mine───────────╮│                                                                 │"
"│  api#2 Change 2 @alice        ││                                                                 │"
"│  org/other#1 Change 1 @alice  ││                                                                 │"
"│                               │╰─────────────────────────────────────────────────────────────────╯"
"│                               │╭ Command log ────────────────────────────────────────────────────╮"
"╰───────────────────────────────╯│✓ git -C /src/api pull --ff-only                                 │"
"╭[4] To do │ In progress │ Done─╮│                                                                 │"
"│no [tracker] configured        ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"╰───────────────────────────────╯╰─────────────────────────────────────────────────────────────────╯"
"Space open · n new · e edit · m move · d remove · x close tab · g open · p pull · f finish · ? actio"
