src/tui/snapshots/atelier__tui__tests__issues_panel.snap
---
source: src/tui/mod.rs
expression: "render(&model, 120, 30)"
---
"╭[1] Workspaces │ Repos────────────────╮╭ Main ────────────────────────────────────────────────────────────────────────╮"
"│default (here) 1 open                 ││Issue      ABC-1                                                              │"
"│side                                  ││Title      Issue ABC-1                                                        │"
"│                                      ││State      To do                                                              │"
"│                                      ││Status     open                                                               │"
"╰──────────────────────────────────────╯│Blocked    no                                                                 │"
"╭[2] Work · default────────────────────╮│Labels     ready-for-agent                                                    │"
"│▾ ABC-1 2 · 1 open                    ││Assignees                                                                     │"
"│  ● api:ABC-1-login !                 ││Updated                                                                       │"
"│  ○ web:ABC-1-form                    ││URL        https://forge/api/issues/ABC-1                                     │"
"│○ api:main ↓3                         ││Project    org/api                                                            │"
"│                                      ││Worktree   ● api:ABC-1-login · default · tab open                             │"
"│                                      ││Worktree   ○ web:ABC-1-form · default · tab closed                            │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯│                                                                              │"
"╭[3] To review │ Mine──────────────────╮│                                                                              │"
"│  api#2 Change 2 @alice               ││                                                                              │"
"│  org/other#1 Change 1 @alice         ││                                                                              │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Command log ─────────────────────────────────────────────────────────────────╮"
"╰──────────────────────────────────────╯│✓ git -C /src/api pull --ff-only                                              │"
"╭[4] Ready for agent 2/4───────────────╮│                                                                              │"
"│  api#1 Issue api#1 ready-for-agent   ││                                                                              │"
"│● ABC-1 Issue ABC-1 ready-for-agent   ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────╯"
"Space open · n new · x close tab · f finish · o browse · ? actions · q quit                                             "
