src/tui/snapshots/atelier__tui__tests__issues_panel_from_github.snap
---
source: src/tui/mod.rs
expression: "render(&model, 120, 30)"
---
"╭[1] Workspaces │ Repos────────────────────────────────────╮╭ Main ────────────────────────────────────────────────────╮"
"│default (here) 1 open                                     ││Issue      atelier#7                                      │"
"│side                                                      ││Title      Phase 6: Home Manager module                   │"
"│                                                          ││State      To do                                          │"
"│                                                          ││Status     open                                           │"
"╰──────────────────────────────────────────────────────────╯│Blocked    no                                             │"
"╭[2] Work · default────────────────────────────────────────╮│Labels     none                                           │"
"│▾ ABC-1 2 · 1 open                                        ││Assignees  none                                           │"
"│  ● api:ABC-1-login !                                     ││Updated    2026-10-04T15:07:15Z                           │"
"│  ○ web:ABC-1-form                                        ││URL        https://github.com/remigourdon/atelier/issues/7│"
"│○ api:main ↓3                                             ││Project    remigourdon/atelier                            │"
"│                                                          ││Worktree   none: Space or n creates one                   │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"╰──────────────────────────────────────────────────────────╯│                                                          │"
"╭[3] To review │ Mine──────────────────────────────────────╮│                                                          │"
"│  api#2 Change 2 @alice                                   ││                                                          │"
"│  org/other#1 Change 1 @alice                             ││                                                          │"
"│                                                          │╰──────────────────────────────────────────────────────────╯"
"│                                                          │╭ Command log ─────────────────────────────────────────────╮"
"╰──────────────────────────────────────────────────────────╯│✓ git -C /src/api pull --ff-only                          │"
"╭[4] Blocked │ Ready for agent │ Triage │ Backlog──────────╮│                                                          │"
"│  atelier#7 Phase 6: Home Manager module                  ││                                                          │"
"│  atelier#4 done Phase 3: Reviews panel                   ││                                                          │"
"│  atelier#3 done Phase 2: TUI frame, Workspaces and Work  ││                                                          │"
"│  atelier#2 done Phase 1: core, CLI and hooks             ││                                                          │"
"╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯"
"Space open · n new · x close tab · f finish · o browse · ? actions · q quit                                             "
