src/tui/snapshots/atelier__tui__tests__main_layout.snap
---
source: src/tui/mod.rs
assertion_line: 213
expression: "render(&loaded(120, 30), 120, 30)"
---
"╭[1] Workspaces │ Repos────────────────╮╭ Main ────────────────────────────────────────────────────────────────────────╮"
"│default (here) 1 open                 ││Repo        api                                                               │"
"│side                                  ││Branch      ABC-1-login                                                       │"
"│                                      ││Path        /src/api.ABC-1-login                                              │"
"│                                      ││Workspace   default                                                           │"
"╰──────────────────────────────────────╯│Group       ABC-1                                                             │"
"╭[2] Work · default────────────────────╮│Issue keys  ABC-1                                                             │"
"│▾ ABC-1 2 · 1 open                    ││Tab         ◉ open                                                            │"
"│  ◉ api:ABC-1-login                   ││Changes     ! unstaged changes                                                │"
"│  ○ web:ABC-1-form                    ││            +0 −0 lines                                                       │"
"│○ api:main                            ││Remote      no upstream                                                       │"
"│                                      ││                                                                              │"
"│                                      ││Recent commits                                                                │"
"│                                      ││abc1234 Add login (2 hours ago, R)                                            │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯│                                                                              │"
"╭[3] To review │ Mine──────────────────╮│                                                                              │"
"│  api#2 Change 2 @alice               ││                                                                              │"
"│  org/other#1 Change 1 @alice         ││                                                                              │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Command log ─────────────────────────────────────────────────────────────────╮"
"╰──────────────────────────────────────╯│✓ git -C /src/api pull --ff-only                                              │"
"╭[4] To do │ In progress │ Done────────╮│                                                                              │"
"│no [tracker] configured               ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────╯"
"Space open · n new · e edit · m move · d remove · x close tab · g open · p pull · f finish · ? actions · q quit         "
